<resources>
    <string name="a1_lang_Chinese_name_comment">English</string>
    <string name="act_balance_detlist">Detail list</string>
    <string name="act_balance_piechart">Pie chart</string>
    <string name="act_balance_yearly_cumulative_timechart">Yearly chart(cumulative)</string>
    <string name="act_balance_yearly_runchart">Yearly Asset-Liability run chart</string>
    <string name="act_balance_yearly_timechart">Yearly chart</string>
    <string name="act_toggle_hierarchical_report">Toggle Hierarchical</string>
    <string name="app_name">Daily Money+</string>
    <string name="cact_cancel">Cancel</string>
    <string name="cact_close">Close</string>
    <string name="cact_copy">Copy</string>
    <string name="cact_create">Create</string>
    <string name="cact_delete">Delete</string>
    <string name="cact_edit">Edit</string>
    <string name="cact_new">New</string>
    <string name="cact_ok">OK</string>
    <string name="cact_stop">Stop</string>
    <string name="cact_update">Update</string>
    <string name="cat_set_working_book">Set working book</string>
    <string name="clabel_alert">Alert</string>
    <string name="clabel_all">All</string>
    <string name="clabel_busy">Busy</string>
    <string name="clabel_default">Default</string>
    <string name="clabel_error">Error</string>
    <string name="clabel_info">Information</string>
    <string name="clabel_name">Name</string>
    <string name="clabel_share">Share</string>
    <string name="clabel_type">Type</string>
    <string name="clabel_unknown">Unknown</string>
    <string name="clabel_warn">Warn</string>
    <string name="cmsg_busy">Application is busy, please wait for a second</string>
    <string name="cmsg_error">Error : %1$s</string>
    <string name="cmsg_field_empty">%1$s is empty</string>
    <string name="cmsg_field_zero">%1$s is zero</string>
    <string name="defacc_bank1">Bank.A</string>
    <string name="defacc_bank2">Bank.B</string>
    <string name="defacc_cash">Cash</string>
    <string name="defacc_creditcard">Credit card</string>
    <string name="defacc_entertainment">Entertainment</string>
    <string name="defacc_food1">Food.Personal</string>
    <string name="defacc_food2">Food.Party</string>
    <string name="defacc_interest">Interest</string>
    <string name="defacc_otherexpense">Other expense</string>
    <string name="defacc_otherincome">Other income</string>
    <string name="defacc_salary">Salary</string>
    <string name="dt_main">Main</string>
    <string name="dt_reports">Reports</string>
    <string name="dt_tests">Tests</string>
    <string name="dtitem_accmgnt">Accounts</string>
    <string name="dtitem_adddetail">Add Detail</string>
    <string name="dtitem_books">Books</string>
    <string name="dtitem_datamain">Data</string>
    <string name="dtitem_detlist">Details</string>
    <string name="dtitem_detlist_day">Daily list</string>
    <string name="dtitem_detlist_month">Monthly list</string>
    <string name="dtitem_detlist_week">Weekly list</string>
    <string name="dtitem_detlist_year">Yearly list</string>
    <string name="dtitem_prefs">Preferences</string>
    <string name="dtitem_report_cumulative_balance">Cumulative Balance</string>
    <string name="dtitem_report_monthly_balance">Monthly balance</string>
    <string name="dtitem_report_search">Search</string>
    <string name="dtitem_report_yearly_balance">Yearly balance</string>
    <string name="label_about">About</string>
    <string name="label_accdetlist_dateinfo">%1$s to %2$s</string>
    <string name="label_account">Account</string>
    <string name="label_account_only">Account only</string>
    <string name="label_all_details">All details (%1$s records)</string>
    <string name="label_asset">Asset</string>
    <string name="label_backup_data">Backup Data</string>
    <string name="label_balance">Balance</string>
    <string name="label_balance_mode_month">In %1$s (%2$s-%3$s)</string>
    <string name="label_balance_mode_month_total">Until %1$s (-%2$s)</string>
    <string name="label_balance_mode_year">Balance in year %1$s</string>
    <string name="label_balance_mode_year_total">Balance until year %1$s</string>
    <string name="label_balance_tasset">Asset balance</string>
    <string name="label_balance_texpense">Expense balance</string>
    <string name="label_balance_tincome">Income balance</string>
    <string name="label_balance_tliability">Liability balance</string>
    <string name="label_balance_tother">Other balance</string>
    <string name="label_balance_yearly_cumulative_timechart">%1$s in %2$s (cumulative)</string>
    <string name="label_balance_yearly_runchart">Asset-Liability(cumulative) in %1$s</string>
    <string name="label_balance_yearly_timechart">%1$s in %2$s</string>
    <string name="label_cash_account">Cash account</string>
    <string name="label_clear_folder">Clear working folder</string>
    <string name="label_contributor">Contributor</string>
    <string name="label_count">(%1$s)</string>
    <string name="label_create_default">Create default data(account)</string>
    <string name="label_cumulative_cash">Cash : %1$s</string>
    <string name="label_date">Date</string>
    <string name="label_day_details">%1$s (%2$s records)</string>
    <string name="label_default_book_symbol">$</string>
    <string name="label_detail">Detail</string>
    <string name="label_detail_only">Detail only</string>
    <string name="label_detlayout_type1">To - Money</string>
    <string name="label_detlayout_type2">Note - Money</string>
    <string name="label_detlayout_type3">Money - To</string>
    <string name="label_detlayout_type4">Money - Note</string>
    <string name="label_detlist_from">&lt; %1$s</string>
    <string name="label_detlist_sum_asset">Asset %1$s </string>
    <string name="label_detlist_sum_expense">Expense %1$s</string>
    <string name="label_detlist_sum_income">Income %1$s</string>
    <string name="label_detlist_sum_liability">Liability %1$s</string>
    <string name="label_detlist_sum_other">Other %1$s</string>
    <string name="label_detlist_to">%1$s</string>
    <string name="label_expense">Expense</string>
    <string name="label_export_csv">Export CSV</string>
    <string name="label_firstday_mon">Monday</string>
    <string name="label_firstday_sat">Saturday</string>
    <string name="label_firstday_sun">Sunday</string>
    <string name="label_from_account">From</string>
    <string name="label_from_date">from Date</string>
    <string name="label_history">History</string>
    <string name="label_how2use">How to use</string>
    <string name="label_import_csv">Import CSV</string>
    <string name="label_income">Income</string>
    <string name="label_initial_value">Initial</string>
    <string name="label_liability">Liability</string>
    <string name="label_money">Money</string>
    <string name="label_month_details">%1$s (%2$s records)</string>
    <string name="label_monthly_expense">Monthly : %1$s</string>
    <string name="label_note">Note</string>
    <string name="label_other">Other</string>
    <string name="label_position_after">After</string>
    <string name="label_position_front">Front</string>
    <string name="label_position_none">No Display</string>
    <string name="label_prefcat_csv">CSV</string>
    <string name="label_prefcat_others">Others</string>
    <string name="label_prefs_allow_analytics">Send google analytics</string>
    <string name="label_prefs_allow_analytics_sum">[Will not send any other data]Sending usage to help me improve application</string>
    <string name="label_prefs_backup_with_timestamp">Backup with timestamp</string>
    <string name="label_prefs_backup_with_timestamp_sum">Copy and append timestamp to files (Recommended)</string>
    <string name="label_prefs_csv_encoding">CSV Encoding</string>
    <string name="label_prefs_csv_encoding_sum">Do not change this if you have no idea what this is</string>
    <string name="label_prefs_detlayout">Detail layout</string>
    <string name="label_prefs_detlayout_sum">Choose different type for detail list layout</string>
    <string name="label_prefs_firstday_week">First day of week</string>
    <string name="label_prefs_firstday_week_sum">Set the first day of week</string>
    <string name="label_prefs_improvider">In-memory-provider</string>
    <string name="label_prefs_improvider_sum">For trying this application, data in this mode will not be persisted</string>
    <string name="label_prefs_lastbackup">Last Data Backup Time</string>
    <string name="label_prefs_maxrecords">Maximum records</string>
    <string name="label_prefs_maxrecords_sum">Set number of max records in detail list, -1 means no limit</string>
    <string name="label_prefs_password">Password protection-1</string>
    <string name="label_prefs_password_sum">Set application password, empty means no protection</string>
    <string name="label_prefs_passwordvd">Password protection-2</string>
    <string name="label_prefs_passwordvd_sum">Set same password again to enable protection</string>
    <string name="label_prefs_startday_month">Start day of month</string>
    <string name="label_prefs_startday_month_sum">Set the start day of month(between 1 - 28)</string>
    <string name="label_prefs_startday_year">Start day of year</string>
    <string name="label_prefs_startday_year_sum">Set the start day of year(MMDD format, e.g. 0501)</string>
    <string name="label_prefs_testsdekstop">Open tests desktop</string>
    <string name="label_prefs_testsdekstop_sum">open the tests desktop, for developer only</string>
    <string name="label_prefs_workingfolder">Working folder</string>
    <string name="label_reports">Reports</string>
    <string name="label_request_storage_permission">Request storage permission</string>
    <string name="label_reset">Reset</string>
    <string name="label_restore_data">Restore Data</string>
    <string name="label_share_csv">Share CSV</string>
    <string name="label_shared_account_only">Shared-Account only</string>
    <string name="label_shared_all">Shared-All</string>
    <string name="label_shared_detail_only">Shared-Detail only</string>
    <string name="label_symbol">Symbol</string>
    <string name="label_symbol_position">Symbol Position</string>
    <string name="label_to_account">To</string>
    <string name="label_to_date">to Date</string>
    <string name="label_week_details">%5$s %1$s to %2$s - Week %3$s/%4$s (%6$s)</string>
    <string name="label_weekly_expense">Weekly : %1$s</string>
    <string name="label_what_is_new">What is new</string>
    <string name="label_year_details">%1$s (%2$s records)</string>
    <string name="msg_account_created">Account %1$s was created in type %2$s</string>
    <string name="msg_account_deleted">Account %1$s was deleted</string>
    <string name="msg_account_existed">%1$s is existed in type %2$s</string>
    <string name="msg_account_updated">Account %1$s was updated in type %2$s</string>
    <string name="msg_book_created">Book %1$s was created</string>
    <string name="default_prefs_format_date">M/D/Y</string>
    <string name="default_prefs_format_time">12</string>
    <string name="default_prefs_format_month">digital</string>
    <string name="label_prefcat_security">Security</string>
    <string name="label_prefcat_display">Display</string>
    <string name="label_prefcat_data">Data</string>
    <string name="label_prefcat_developer">Developer</string>
    <string name="label_prefcat_contribution">Contribution</string>
    <string name="label_prefs_format_date_sum">Y/M/D, D/M/Y or M/D/Y</string>
    <string name="label_prefs_format_date">Date format</string>
    <string name="label_prefs_format_time_sum">12 or 24</string>
    <string name="label_prefs_format_time">Time format</string>
    <string name="label_prefs_format_month_sum">Digital, Short or Full</string>
    <string name="label_prefs_format_month">Month format</string>
    <string name="label_reset_working_book">Reset working book</string>
</resources>