<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 
	<CheckBoxPreference android:key="use_improvider" android:title="@string/label_prefs_improvider"
		android:summary="@string/label_prefs_improvider_sum" android:defaultValue="false" />
	 -->

    <PreferenceCategory android:title="@string/label_prefcat_display">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_detlayout_label"
            android:entryValues="@array/prefs_detlayout_val"
            android:key="detail_list_layout"
            android:summary="@string/label_prefs_detlayout_sum"
            android:title="@string/label_prefs_detlayout" />

        <ListPreference
            android:defaultValue="@string/default_prefs_format_date"
            android:entries="@array/prefs_format_date_label"
            android:entryValues="@array/prefs_format_date_val"
            android:key="format_date"
            android:summary="@string/label_prefs_format_date_sum"
            android:title="@string/label_prefs_format_date" />
        <ListPreference
            android:defaultValue="@string/default_prefs_format_time"
            android:entries="@array/prefs_format_time_val"
            android:entryValues="@array/prefs_format_time_val"
            android:key="format_time"
            android:summary="@string/label_prefs_format_time_sum"
            android:title="@string/label_prefs_format_time" />
        <ListPreference
            android:defaultValue="@string/default_prefs_format_month"
            android:entries="@array/prefs_format_month_label"
            android:entryValues="@array/prefs_format_month_val"
            android:key="format_month"
            android:summary="@string/label_prefs_format_month_sum"
            android:title="@string/label_prefs_format_month" />
        <EditTextPreference
            android:defaultValue="-1"
            android:key="max_records"
            android:numeric="signed"
            android:summary="@string/label_prefs_maxrecords_sum"
            android:title="@string/label_prefs_maxrecords" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/label_prefcat_security">
        <EditTextPreference
            android:inputType="textPassword"
            android:key="password"
            android:summary="@string/label_prefs_password_sum"
            android:title="@string/label_prefs_password" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="passwordvd"
            android:summary="@string/label_prefs_passwordvd_sum"
            android:title="@string/label_prefs_passwordvd" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/label_prefcat_data">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="backup_with_timestamp"
            android:summary="@string/label_prefs_backup_with_timestamp_sum"
            android:title="@string/label_prefs_backup_with_timestamp" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/label_prefcat_accounting">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_firstday_week_label"
            android:entryValues="@array/prefs_firstday_week_val"
            android:key="firstday_week"
            android:summary="@string/label_prefs_firstday_week_sum"
            android:title="@string/label_prefs_firstday_week" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_firstday_month_val"
            android:entryValues="@array/prefs_firstday_month_val"
            android:key="firstday_month"
            android:summary="@string/label_prefs_startday_month_sum"
            android:title="@string/label_prefs_startday_month" />
        <EditTextPreference
            android:defaultValue="0101"
            android:key="startday_year"
            android:inputType="text"
            android:summary="@string/label_prefs_startday_year_sum"
            android:title="@string/label_prefs_startday_year" />
    </PreferenceCategory>


    <PreferenceScreen
        android:title="@string/label_prefcat_contribution">
        <Preference
            android:key="mailme_lang" android:persistent="false"
            android:summary="@string/label_prefs_lang_contriubtion_sum"
            android:title="@string/label_prefs_lang_contriubtion" >
        </Preference>
        <Preference
            android:key="vote_dm" android:persistent="false"
            android:summary="@string/label_prefs_vote_sum"
            android:title="@string/label_prefs_vote" >
        </Preference>
        <Preference
            android:key="like_dm" android:persistent="false"
            android:summary="@string/label_prefs_like_sum"
            android:title="@string/label_prefs_like" >
        </Preference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_analytics"
            android:summary="@string/label_prefs_allow_analytics_sum"
            android:title="@string/label_prefs_allow_analytics" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/label_prefcat_developer" >
        <!-- at the bottom -->
        <ListPreference
            android:defaultValue="UTF8"
            android:entries="@array/prefs_csv_encoding_val"
            android:entryValues="@array/prefs_csv_encoding_val"
            android:key="csv_encoding"
            android:summary="@string/label_prefs_csv_encoding_sum"
            android:title="@string/label_prefs_csv_encoding" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="open_testsdekstop"
            android:summary="@string/label_prefs_testsdekstop_sum"
            android:title="@string/label_prefs_testsdekstop" />
    </PreferenceScreen>
</PreferenceScreen>
