<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/datamain_workingfolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@android:drawable/ic_dialog_info"
                android:drawablePadding="10sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/label_prefs_workingfolder" />

            <Button
                android:id="@+id/datamain_request_permission"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_edit_white_24dp"
                android:gravity="center"
                android:text="@string/label_request_storage_permission" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingRight="5sp"
                    android:text="@string/label_prefs_lastbackup" />
                <TextView
                    android:id="@+id/datamain_lastbackup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/clabel_unknown" />
            </LinearLayout>

            <Button
                android:id="@+id/datamain_backup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_save_white_24dp"
                android:gravity="center"
                android:text="@string/label_backup_data" />

            <Button
                android:id="@+id/datamain_export_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_import_export_white_24dp"
                android:gravity="center"
                android:text="@string/label_export_csv" />

            <Button
                android:id="@+id/datamain_share_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_share_white_24dp"
                android:gravity="center"
                android:text="@string/label_share_csv" />


            <Button
                android:id="@+id/datamain_restore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_save_white_24dp"
                android:gravity="center"
                android:text="@string/label_restore_data" />

            <Button
                android:id="@+id/datamain_import_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_import_export_white_24dp"
                android:gravity="center"
                android:text="@string/label_import_csv" />

            <!--TODO should move to developer-->
            <Button
                android:id="@+id/datamain_reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_settings_backup_restore_white_24dp"
                android:gravity="center"
                android:text="@string/label_reset"
                android:visibility="gone" />

            <Button
                android:id="@+id/datamain_clear_folder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_settings_backup_restore_white_24dp"
                android:gravity="center"
                android:text="@string/label_clear_folder"
                android:visibility="gone" />

            <Button
                android:id="@+id/datamain_create_default"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_settings_backup_restore_white_24dp"
                android:gravity="center"
                android:text="@string/label_create_default"
                android:visibility="gone"></Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
