<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?appPrimaryLightColor"
    android:orientation="vertical"
    tools:context=".ui.legacy.DataMaintenanceActivity">

    <include layout="@layout/app_bar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/data_maintenance_workingfolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@android:drawable/ic_dialog_info"
                android:drawablePadding="10sp"
                android:gravity="center"
                android:text="@string/label_prefs_workingfolder" />

            <Button
                android:id="@+id/data_maintenance_request_permission"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?ic_edit"
                android:gravity="center"
                android:text="@string/label_request_storage_permission" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingRight="5sp"
                    android:text="@string/label_prefs_lastbackup" />

                <TextView
                    android:id="@+id/datamain_lastbackup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/label_unknown" />
            </LinearLayout>

            <Button
                android:id="@+id/data_maintenance_backup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?ic_save"
                android:gravity="center"
                android:text="@string/label_backup_data" />

            <Button
                android:id="@+id/data_maintenance_export_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="?ic_import_export"
                android:gravity="center"
                android:text="@string/label_export_csv" />

            <Button
                android:id="@+id/data_maintenance_share_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="?ic_share"
                android:gravity="center"
                android:text="@string/label_share_csv" />


            <Button
                android:id="@+id/data_maintenance_restore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?ic_save"
                android:gravity="center"
                android:text="@string/label_restore_data" />

            <Button
                android:id="@+id/data_maintenance_import_csv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="?ic_import_export"
                android:gravity="center"
                android:text="@string/label_import_csv" />

            <Button
                android:id="@+id/data_maintenance_reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="?ic_settings_backup_restore"
                android:gravity="center"
                android:text="@string/label_reset_working_book" />

            <!--TODO should move to developer-->

            <Button
                android:id="@+id/data_maintenance_clear_folder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="?ic_settings_backup_restore"
                android:gravity="center"
                android:text="@string/label_clear_folder"
                android:visibility="gone" />

            <Button
                android:id="@+id/data_maintenance_create_default"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="?ic_settings_backup_restore"
                android:gravity="center"
                android:text="@string/label_create_default"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
